// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TabButton renders a TabButton 1`] = `
<div>
  <button
    class="sc-AxiKw cUFBzy 
    tab-button
    
  "
    type="button"
  >
    <div
      class="sc-AxirZ fFZKsu"
    >
      <div
        class="sc-AxjAm gYomkt"
      >
        Refine Results
      </div>
    </div>
  </button>
</div>
`;

exports[`TabButton renders multiple TabButtons 1`] = `
<div>
  <button
    class="sc-AxiKw cUFBzy 
    tab-button
    
  "
    type="button"
  >
    <div
      class="sc-AxirZ fFZKsu"
    >
      <div
        class="sc-AxjAm gYomkt"
      >
        Refine Results1
      </div>
    </div>
  </button>
  <button
    class="sc-AxiKw cUFBzy 
    tab-button
    
  "
    type="button"
  >
    <div
      class="sc-AxirZ fFZKsu"
    >
      <div
        class="sc-AxjAm gYomkt"
      >
        Refine Results2
      </div>
    </div>
  </button>
</div>
`;

exports[`TabPanel renders a TabPanel 1`] = `
<div>
  <div
    class="sc-AxgMl cKdPyh 
    tab-panel
    
  "
    name="tab-panel-test"
  >
    <p>
      View Type
    </p>
  </div>
</div>
`;

exports[`TabPanel renders additional classNames 1`] = `
<div>
  <div
    class="sc-AxgMl cKdPyh 
    tab-panel
    test classes
  "
    name="tab-panel-test1"
  >
    <p>
      test1
    </p>
  </div>
  <div
    class="sc-AxgMl cKdPyh 
    tab-panel
    another-class
  "
    name="tab-panel-test2"
  >
    <p>
      test2
    </p>
  </div>
</div>
`;

exports[`TabPanel renders multiple TabPanels 1`] = `
<div>
  <div
    class="sc-AxgMl cKdPyh 
    tab-panel
    
  "
    name="tab-panel-test1"
  >
    <p>
      test1
    </p>
  </div>
  <div
    class="sc-AxgMl cKdPyh 
    tab-panel
    
  "
    name="tab-panel-test2"
  >
    <p>
      test2
    </p>
  </div>
  <div
    class="sc-AxgMl cKdPyh 
    tab-panel
    
  "
    name="tab-panel-test3"
  >
    <p>
      test3
    </p>
  </div>
  <div
    class="sc-AxgMl cKdPyh 
    tab-panel
    
  "
    name="tab-panel-test4"
  >
    <p>
      test4
    </p>
  </div>
</div>
`;

exports[`Tabs renders a border 1`] = `
<div>
  <div
    class="sc-AxhCb gLPSrI 
    tabs-container
    
  "
    style="min-height: initial;"
  >
    <div
      class="sc-AxhUy eSDXgq tab-button-wrap"
    >
      <button
        class="sc-AxiKw jmvAHE 
    tab-button
    active
  "
        type="button"
      >
        <div
          class="sc-AxirZ ejraiU"
        >
          <div
            class="sc-AxjAm gYomkt"
          >
            Refine Results
          </div>
        </div>
      </button>
      <button
        class="sc-AxiKw cUFBzy 
    tab-button
    
  "
        type="button"
      >
        <div
          class="sc-AxirZ fFZKsu"
        >
          <div
            class="sc-AxjAm gYomkt"
          >
            Edit Details
          </div>
        </div>
      </button>
    </div>
    <div
      class="sc-AxgMl cYlDCg 
    tab-panel
    
  "
      name="refine-results-1"
    >
      <p>
        View Type
      </p>
    </div>
    <div
      class="sc-AxgMl cKdPyh 
    tab-panel
    
  "
      name="edit-details-1"
    >
      <p>
        Tab two content
      </p>
      <p>
        stuff
      </p>
    </div>
  </div>
</div>
`;

exports[`Tabs renders additional classNames 1`] = `
<div>
  <div
    class="sc-AxhCb eQtKnf 
    tabs-container
    test classes
  "
    style="min-height: initial;"
  >
    <div
      class="sc-AxhUy eSDXgq tab-button-wrap"
    >
      <button
        class="sc-AxiKw jmvAHE 
    tab-button
    active
  "
        type="button"
      >
        <div
          class="sc-AxirZ ejraiU"
        >
          <div
            class="sc-AxjAm gYomkt"
          >
            Refine Results
          </div>
        </div>
      </button>
      <button
        class="sc-AxiKw cUFBzy 
    tab-button
    
  "
        type="button"
      >
        <div
          class="sc-AxirZ fFZKsu"
        >
          <div
            class="sc-AxjAm gYomkt"
          >
            Edit Details
          </div>
        </div>
      </button>
    </div>
    <div
      class="sc-AxgMl cYlDCg 
    tab-panel
    
  "
      name="refine-results-1"
    >
      <p>
        View Type
      </p>
    </div>
    <div
      class="sc-AxgMl cKdPyh 
    tab-panel
    
  "
      name="edit-details-1"
    >
      <p>
        Tab two content
      </p>
      <p>
        stuff
      </p>
    </div>
  </div>
</div>
`;

exports[`Tabs renders correctly with minimal props 1`] = `
<div>
  <div
    class="sc-AxhCb eQtKnf 
    tabs-container
    
  "
    style="min-height: initial;"
  >
    <div
      class="sc-AxhUy eSDXgq tab-button-wrap"
    >
      <button
        class="sc-AxiKw jmvAHE 
    tab-button
    active
  "
        type="button"
      >
        <div
          class="sc-AxirZ ejraiU"
        >
          <div
            class="sc-AxjAm gYomkt"
          >
            Refine Results
          </div>
        </div>
      </button>
      <button
        class="sc-AxiKw cUFBzy 
    tab-button
    
  "
        type="button"
      >
        <div
          class="sc-AxirZ fFZKsu"
        >
          <div
            class="sc-AxjAm gYomkt"
          >
            Edit Details
          </div>
        </div>
      </button>
    </div>
    <div
      class="sc-AxgMl cYlDCg 
    tab-panel
    
  "
      name="refine-results-1"
    >
      <p>
        View Type
      </p>
    </div>
    <div
      class="sc-AxgMl cKdPyh 
    tab-panel
    
  "
      name="edit-details-1"
    >
      <p>
        Tab two content
      </p>
      <p>
        stuff
      </p>
    </div>
  </div>
</div>
`;
